# piscem-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  implementation_plan.md  publish.sh  release-py.sh
.claude/: settings.local.json
.github/workflows/: publish-py-piscem.yml
crates/py-piscem/: Cargo.toml  README.md  piscem.pyi  pyproject.toml
crates/py-piscem/src/: lib.rs
crates/py-piscem/tests/: test_piscem.py
examples/: atac_mismatch_diag.rs  index_stats.rs  test_atac_compare.rs
src/: lib.rs  main.rs
src/cli/: build.rs  inspect.rs  map_bulk.rs  map_scatac.rs  map_scrna.rs  mod.rs  parity.rs  poison.rs  stats.rs
src/index/: build.rs  build_poison.rs  contig_table.rs  eq_classes.rs  formats.rs  mod.rs  poison_table.rs  reference_index.rs  refinfo.rs
src/io/: fastx.rs  map_info.rs  mod.rs  rad.rs  threads.rs
src/mapping/: binning.rs  cache.rs  chain_state.rs  engine.rs  filters.rs  hit_searcher.rs  hits.rs  kmer_value.rs  map_fragment.rs  merge_pairs.rs  mod.rs  overlap.rs  processors.rs  projected_hits.rs  sketch_hit_simple.rs  streaming_query.rs  unitig_end_cache.rs
src/mapping/protocols/: bulk.rs  custom.rs  mod.rs  scatac.rs  scrna.rs
src/verify/: index_compare.rs  mod.rs  parity.rs  rad_compare.rs
tests/: parity_smoke.rs  rad_parity_atac.rs  rad_parity_bulk.rs  rad_parity_sc.rs
