[package]
name = "piscem-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Rust implementation of piscem with semantic parity harness"

[features]
parity-test = ["dep:libradicl"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sshash-lib = { path = "./sshash-rs/crates/sshash-lib" }

# Fast hashing with deterministic seeding (same version as sshash-rs)
ahash = "0.8"

# Phase 4 dependencies
dashmap = "6"
smallvec = "1.13"
nohash-hasher = "0.2"
crossbeam = "0.8"
paraseq = "0.4"
niffler = "2"

# Succinct data structures (same versions as sshash-rs)
sux = { version = "0.12", features = ["epserde"] }
epserde = "0.12"
value-traits = "0.2"
mem_dbg = "0.4.0"

# RAD file parsing — optional, enabled by parity-test feature
libradicl = { git = "https://github.com/COMBINE-lab/libradicl.git", branch = "develop", optional = true }

[dev-dependencies]
tempfile = "3"
flate2 = "1"
libradicl = { git = "https://github.com/COMBINE-lab/libradicl.git", branch = "develop" }

[[example]]
name = "atac_mismatch_diag"
required-features = ["parity-test"]

[[example]]
name = "test_atac_compare"
required-features = ["parity-test"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
