[package]
name = "piscem-py"
version = "0.1.0"
edition = "2024"
description = "Python bindings for the piscem k-mer mapping engine"

[lib]
name = "piscem"
crate-type = ["cdylib"]

[dependencies]
piscem-rs = { path = "../.." }
sshash-lib = "0.3"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"] }
